Fix bug font not showing properly

--- a/sihat-e/public/assets/css/style.css
+++ b/sihat-e/public/assets/css/style.css
@@ -1561,3 +1561,7 @@ padding: 0px;margin: 0px;width: 100vw;height: 100vh;
   width: 37vw;height: 80vh;border-radius: 20px;margin: 50px;box-shadow: 0px 0px 7px rgb(207,207,207);background: rgb(255,255,255);border-style: none;
 }
 
+.custom-form h1 {
+  width: 286px
+}
+
